# porkbun-ddns-rust

./: .gitignore  Cargo.toml  README.md  config.json.example  ddns_rust_logrotate
src/: lib.rs  main.rs
tests/: integration_test.rs
