[package]
name = "ddns_rust"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "ddns_rust"
path = "src/main.rs"

[lib]
name = "ddns_rust"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"

[dev-dependencies]
mockito = "0.32.1"

